--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,8 +19,11 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.ui.group.add.GroupAddActivity"
+            android:name=".presentation.ui.group.detail.GroupDetailActivity"
             android:exported="false"/>
+        <activity
+            android:name=".presentation.ui.group.add.GroupAddActivity"
+            android:exported="false" />
         <activity
             android:name=".presentation.ui.profilesetting.ProfileSettingActivity"
             android:exported="false" />
@@ -31,18 +34,11 @@
             android:exported="false"/>
         <activity
             android:name=".presentation.ui.register.RegisterActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
         </activity>
-
         <activity
             android:name="com.canhub.cropper.CropImageActivity"
             android:theme="@style/Theme.ImageCropper" />
-
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
@@ -57,7 +53,6 @@
                     android:scheme="@string/KAKAO_OAUTH_HOST" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
