--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -9,6 +9,9 @@ jwt:
   access-expiration-time: ${JWT_ACCESS_EXPIRATION_TIME}
   refresh-expiration-time: ${JWT_REFRESH_EXPIRATION_TIME}
 
+kakao:
+  admin-key: ${KAKAO_ADMIN_KEY}
+
 management:
   endpoint:
     metrics:
