--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -65,6 +65,18 @@ jobs:
         run: |
           echo "$LOCAL_PROPERTIES" > local.properties
 
+      - name: Create keystore.properties
+        env:
+          KEYSTORE_PROPERTIES: ${{ secrets.KEYSTORE_PROPERTIES }}
+        run: |
+          echo "KEYSTORE_PROPERTIES" > keystore.properties
+
+      - name: Create release-keystore
+        env:
+          RELEASE_KEYSTORE: ${{ secrets.RELEASE_KEYSTORE }}
+        run: |
+          echo "RELEASE_KEYSTORE" | base64 -d > release.keystore
+
       - name: Create google-services.json
         env:
           GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
